--- a/aareactions/templates/aareactions/base.html
+++ b/aareactions/templates/aareactions/base.html
@@ -3,15 +3,26 @@
 {% load i18n %}
 
 {% block page_title %}
-    {% translate "Example Plugin" %}
+    {% translate "Reactions" %}
 {% endblock %}
 
 {% block header_nav_brand %}
-    {% translate "Example Plugin" %}
+    {% translate "Reactions" %}
 {% endblock header_nav_brand %}
 
+{% block header_nav_collapse_right %}
+    {{ block.super }}
+        <li class="nav-item">
+            <a class="btn btn-secondary me-2"
+               href="{% url 'aareactions:add_character' %}"
+               title="{% translate 'Add a Character to your Reactions' %}">
+                <i class="fa-solid fa-plus"></i>{% translate "Add Character" %}
+            </a>
+        </li>
+{% endblock header_nav_collapse_right %}
+
 {% block content %}
-    <div class="allianceauth-example-plugin">
+    <div class="allianceauth-reactions">
         {% block details %}{% endblock %}
     </div>
 {% endblock %}
